# agent-blame-finder

./: .gitignore  CODE_OF_CONDUCT.md  NOTICE.md  README.md  RELEASE-NOTES-v0.2-alpha.md  SECURITY.md  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: basic_usage.py
reports/: agent-blackbox-v02-test-report.json
src/agent_blackbox/: __init__.py  cli.py  core.py  jep.py
src/blame_finder/: core.py
tests/: test_core.py
